Fix for Github Pages

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
     "name": "Erinn Time",
     "short_name": "Erinn Time",
     "description": "Erinn Time application displays in-game time on Mabinogi Japan servers.",
-    "start_url": "/",
+    "Scope":"/erinn-time/",
+    "start_url": "./index.html",
     "background_color": "#2f3d58",
     "theme_color": "#2f3d58",
     "orientation": "any",
