--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,13 @@
     "description": "Erinn Time application displays in-game time on Mabinogi Japan servers.",
     "Scope":"/erinn-time/",
     "start_url": "./index.html",
-    "background_color": "#2f3d58",
-    "theme_color": "#2f3d58",
+    "background_color": "#FFFFFF",
+    "theme_color": "#F65D0F",
     "orientation": "any",
     "display": "standalone",
     "icons": [
         {
-            "src": "https://wiki.mabinogiworld.com/images/4/49/Mabisign.PNG",
+            "src": "./Erinn-Time.png",
             "sizes": "512x512"
         }
     ]
